[package]
name = "parser_util"
version = "0.1.0"
authors = ["khadeem dacosta <khadeem.dacosta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default =["extras"]
extras = ["regex"]

[dependencies]
sandboxed_collections = {git="https://github.com/K-C-DaCosta/sandboxed_collections"  }
regex = { version="*", optional=true }



